--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input
         id="textField"
         type="text"
-        placeholder="Enter in the pokemon name"
+        placeholder="Enter in the name or id"
       />
       <input id="submit" type="submit" value="Search for Pokemon" />
     </form>
