--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <main class="container"></main>
     <div id="pokedex">
-      <img src="./img/Pokedex-img.png" alt="A custom made pokedex" />
+        <div class="pokedexImg"></div>
+        <!-- <img src="" alt=""> -->
+      <!-- <img src="./img/Pokedex-img.png" alt="A custom made pokedex" /> -->
     </div>
     <form>
       <input
