--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
   <body>
     <main class="container"></main>
     <div id="pokedex">
-        <div class="pokedexImg"></div>
-        <!-- <img src="" alt=""> -->
-      <!-- <img src="./img/Pokedex-img.png" alt="A custom made pokedex" /> -->
+      <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex" />
+      <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex" />
     </div>
     <form>
       <input
