--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
   <body>
     <main class="container"></main>
     <div id="pokedex">
-      <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex" />
-      <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex" />
+      <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex large" />
+      <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex small" />
+
+      <div id="arrows">
+        <img class="arrowUp" src="./img/ArrowUp.png" alt="Custom arrow png for pokedex" />
+        <img class="arrowDown" src="./img/ArrowDown.png" alt="Custom arrow png for pokedex" />
+      </div>
     </div>
     <form>
       <input
@@ -31,5 +36,7 @@
       />
       <input id="submit" type="submit" value="Search for Pokemon" />
     </form>
+
+    
   </body>
 </html>
