Created a testing file for js and html

--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex by Brandon Haupt</title>
 
-    <link rel="stylesheet" href="./css/pokedex.css" />
+    <!-- <link rel="stylesheet" href="./css/pokedex.css" /> -->
 
-    <script src="./js/pokedex.js" defer></script>
+    <!-- <script src="./js/pokedex.js" defer></script> -->
     <script src="./js/testing.js" defer></script>
 
     <!-- jQuery -->
@@ -21,12 +21,12 @@
   <body>
     <main class="container"></main>
     <div id="pokedex">
-      <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex large" />
-      <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex small" />
+      <!-- <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex large" />
+      <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex small" /> -->
 
       <div id="arrows">
-        <img class="arrowUp" src="./img/ArrowUp.png" alt="Custom arrow png for pokedex" />
-        <img class="arrowDown" src="./img/ArrowDown.png" alt="Custom arrow png for pokedex" />
+        <!-- <img class="arrowUp" src="./img/ArrowUp.png" alt="Custom arrow png for pokedex" />
+        <img class="arrowDown" src="./img/ArrowDown.png" alt="Custom arrow png for pokedex" /> -->
       </div>
     </div>
     <form>
