CSS/Index update
- changed css to change mobile and desktop design
- changed html to get rid of arrows
- changed mobile design

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <img class="pokedex-large" src="./img/Pokedex-img.png" alt="A custom made pokedex large" />
       <img class="pokedex-small" src="./img/Pokedex-mobile.png" alt="A custom made pokedex small" />
 
-      <div id="arrows">
+      <!-- <div id="arrows">
         <img class="arrowUp" src="./img/ArrowUp.png" alt="Custom arrow png for pokedex" />
         <img class="arrowDown" src="./img/ArrowDown.png" alt="Custom arrow png for pokedex" />
-      </div>
+      </div> -->
     </div>
     <form>
       <input
